--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       </div>
       <div class="footer__bar">
         <div class="footer__bar__content">
-          <p>Copyright © 2023 Web Design Mastery. All rights reserved.</p>
+          <p>Copyright © 2025 Arnob Mahmud. All rights reserved.</p>
           <div class="footer__socials">
             <span><i class="ri-instagram-line"></i></span>
             <span><i class="ri-facebook-fill"></i></span>
